--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ hs_err_pid*
 gwt-unitCache/
 www-test/
 .gwt-tmp/
+/saves/
 
 ## Android Studio and Intellij and Android in general
 /android/libs/armeabi/
