--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+## local stuff by manu
+/saves/
+
 ## Java
 
 *.class
@@ -16,7 +19,6 @@ hs_err_pid*
 gwt-unitCache/
 www-test/
 .gwt-tmp/
-/saves/
 
 ## Android Studio and Intellij and Android in general
 /android/libs/armeabi/
